Cap warming-up nodes